--- a/index.html
+++ b/index.html
@@ -54,26 +54,26 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
+            <img src="./images/1.jpg" class="d-block w-100 vh-100" alt="...">
+            <div class="carousel-caption d-none d-md-block text-right mb-5 pb-5">
+              <h5>One more for good measure.</h5>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
             </p>
               <button type="button" class="btn btn-primary btn-lg">Browse Gallery</button>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
+            <img src="./images/2.jpg" class="d-block w-100 vh-100 mb-5 pb-5" alt="...">
+            <div class="carousel-caption d-none d-md-block text-center">
+              <h5>Another example headline.</h5>
               <p>Some representative placeholder content for the second slide.</p>
               <button type="button" class="btn btn-primary btn-lg">Learn more</button>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/3.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
+            <img src="./images/3.jpg" class="d-block w-100 vh-100 mb-5 pb-5" alt="...">
+            <div class="carousel-caption d-none d-md-block text-left">
+              <h5>Example headline.</h5>
               <p>Some representative placeholder content for the third slide.</p>
               <button type="button" class="btn btn-primary btn-lg">Sign up today</button>
             </div>
@@ -169,7 +169,7 @@
             
             </div>
 
-            <div class="col-12 col-md-7 d-flex align-items-center ">
+            <div class="col-12 col-md-7 d-flex align-items-center">
                 <div class="card-body text-left">
                     <h2 class="card-titel">And lastly, this one. Checkmate.</h2>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -190,6 +190,8 @@
             <a href="#carouselExampleCaptions">Back to top</a>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
