--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </nav>
      <!-- Carousel--> 
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -56,7 +56,7 @@
           <div class="carousel-item active">
             <img src="./images/1.jpg" class="d-block w-100 vh-100" alt="...">
             <div class="carousel-caption d-none d-md-block text-right mb-5 pb-5">
-              <h5>One more for good measure.</h5>
+              <h1>One more for good measure.</h1>
               <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
             </p>
               <button type="button" class="btn btn-primary btn-lg">Browse Gallery</button>
@@ -65,7 +65,7 @@
           <div class="carousel-item">
             <img src="./images/2.jpg" class="d-block w-100 vh-100 mb-5 pb-5" alt="...">
             <div class="carousel-caption d-none d-md-block text-center">
-              <h5>Another example headline.</h5>
+              <h1>Another example headline.</h1>
               <p>Some representative placeholder content for the second slide.</p>
               <button type="button" class="btn btn-primary btn-lg">Learn more</button>
             </div>
@@ -73,7 +73,7 @@
           <div class="carousel-item">
             <img src="./images/3.jpg" class="d-block w-100 vh-100 mb-5 pb-5" alt="...">
             <div class="carousel-caption d-none d-md-block text-left">
-              <h5>Example headline.</h5>
+              <h1>Example headline.</h1>
               <p>Some representative placeholder content for the third slide.</p>
               <button type="button" class="btn btn-primary btn-lg">Sign up today</button>
             </div>
