mb-5 pb-5 image

--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/2.jpg" class="d-block w-100 vh-100 mb-5 pb-5" alt="...">
-            <div class="carousel-caption d-none d-md-block text-center">
+            <img src="./images/2.jpg" class="d-block w-100 vh-100" alt="...">
+            <div class="carousel-caption d-none d-md-block text-center mb-5 pb-5">
               <h1>Another example headline.</h1>
               <p>Some representative placeholder content for the second slide.</p>
               <button type="button" class="btn btn-primary btn-lg">Learn more</button>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./images/3.jpg" class="d-block w-100 vh-100 mb-5 pb-5" alt="...">
-            <div class="carousel-caption d-none d-md-block text-left">
+            <img src="./images/3.jpg" class="d-block w-100 vh-100" alt="...">
+            <div class="carousel-caption d-none d-md-block text-left mb-5 pb-5">
               <h1>Example headline.</h1>
               <p>Some representative placeholder content for the third slide.</p>
               <button type="button" class="btn btn-primary btn-lg">Sign up today</button>
